Fix an issue related to letter spacing in the text animation

--- a/css/text-animation.scss
+++ b/css/text-animation.scss
@@ -52,7 +52,7 @@
 
     &__list {
       margin-top: 0;
-      padding-left: 380px;
+      padding-left: 10.88em;
       text-align: left;
       list-style: none;
 
